--- a/FlyerWPFPrototype/FlyerWPFPrototype/View/MainWindowView.xaml
+++ b/FlyerWPFPrototype/FlyerWPFPrototype/View/MainWindowView.xaml
@@ -6,11 +6,12 @@
         xmlns:local="clr-namespace:FlyerWPFPrototype"
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
-        Title="Food Giant Flyer Prototype" Height="350" Width="525">
+        Title="Food Giant Flyer Prototype" Height="90" Width="525"
+        MinHeight="90" MinWidth="525">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
-            <RowDefinition Height="300*"/>
+            <RowDefinition Height="60*"/>
         </Grid.RowDefinitions>
         <Menu Grid.Row="0" Grid.ColumnSpan="3">
             <MenuItem Name="fileMenuItem" Header="File">
